unpackaged/main/default/objects/News__c/News__c.object-meta.xml
<CustomObject>
    <label>News</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>News Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>