unpackaged/main/default/objects/News__c/fields/ActionLabel__c.field-meta.xml
<CustomField>
    <fullName>ActionLabel__c</fullName>
    <label>Action Label</label>
    <length>25</length>
    <type>Text</type>
</CustomField>