unpackaged/main/default/objects/News__c/fields/Highlighted__c.field-meta.xml
<CustomField>
    <fullName>Highlighted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Highlighted</label>
    <type>Checkbox</type>
</CustomField>