unpackaged/main/default/objects/News__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <type>Url</type>
    
</CustomField>