unpackaged/main/default/objects/News__c/fields/PublishEndDate__c.field-meta.xml
<CustomField>
    <fullName>PublishEndDate__c</fullName>
    <label>Publish End Date</label>
    <type>Date</type>
</CustomField>