unpackaged/main/default/objects/News__c/fields/PublishStartDate__c.field-meta.xml
<CustomField>
    <fullName>PublishStartDate__c</fullName>
    <label>Publish Start Date</label>
    <type>Date</type>
</CustomField>