unpackaged/main/default/objects/News__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <type>TextArea</type>
</CustomField>