unpackaged/main/default/objects/News__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>75</length>
    <type>Text</type>
</CustomField>