unpackaged/main/default/objects/News__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Link__c</columns>
    <columns>PublishStartDate__c</columns>
    <columns>PublishEndDate__c</columns>
    <columns>Region__c</columns>
    <columns>Countries__c</columns>
    <columns>Text__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>